kubernetes/photo-upload/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photo-upload
  namespace: photo-upload
spec:
  selector:
    app: photo-upload
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
